# GodotEthersV3

./: CHANGELOG.md  DOCUMENTATION.md  LICENSE  README.md
addons/cactus.godotethers/: README.md  plugin.gd
addons/cactus.godotethers/gdextension/: GodotEthers.gdextension
addons/cactus.godotethers/modules/CCIP/: CCIP.gd
addons/cactus.godotethers/scripts/: EthRequest.gd  ModuleLoader.gd
addons/cactus.godotethers/singletons/: Calldata.gd  Ethers.gd  Transaction.gd
double-precision/: README.md
ethers-v3/: icon.svg.import  plugin.cfg  plugin.gd  project.godot
ethers-v3/example/: Example.tscn
ethers-v3/gdextension/: GodotEthers.gdextension
ethers-v3/modules/CCIP/: CCIP.gd  CCIP.tscn
ethers-v3/modules/EtherealTraveler/: EtherealTraveler.gd  EtherealTraveler.tscn
ethers-v3/modules/dInterfaceStandardExample/: dInterfaceStandardExample.gd  dInterfaceStandardExample.tscn
ethers-v3/scenes/: EthRequest.tscn  Main.tscn
ethers-v3/scripts/: EnclaveContext.gd  EthRequest.gd  Main.gd  NewMain.gd  OldMain.gd
ethers-v3/singletons/: Calldata.gd  Contract.gd  Ethers.gd  Transaction.gd
rust/: Cargo.toml  GodotEthers.gdextension
rust/src/: lib.rs
