[package]
name = "godot-ethers" 
version = "0.1.0"    
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
godot = { git = "https://github.com/godot-rust/gdext", branch = "master" }
ethers = "2.0.4"
ethers-contract = "2.0.4"
serde = "1.0.163"
futures = "0.3.28"
hex = "0.4.3"
num-bigint = "0.4.4"
pbkdf2 = "0.12.2"
sha2 = "0.10.8"
zeroize = "1.8.1"